Fix login screen layout by wrapping sidebar

--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ h6,
     height: 100vh;
     width: 100vw;
     background-color: var(--surface-hover);
+    overflow: hidden;
 }
 
 .login-box {
